Fix image edit area overflow in media browsing modal

--- a/resources/sass/_form-field.scss
+++ b/resources/sass/_form-field.scss
@@ -174,6 +174,25 @@
     width: 295px;
     border-left: 1px dashed rgba(#000, 0.1);
     margin-left: 5px;
+    height: 100%;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
+      border-radius: 3px;
+    }
+
+    &::-webkit-scrollbar {
+      width: 6px;
+      border-radius: 3px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(#000, 0.1);
+      border-radius: 3px;
+    }
+
   }
 
   .input-dropzone-wrap {
